fixed CSS for image track overflow

--- a/react-portfolio-app/src/index.css
+++ b/react-portfolio-app/src/index.css
@@ -174,6 +174,13 @@ nav ul li a:focus {
 /* Styling the image track */
 /*---------------------------------------------------------------------------------------------------------*/
 
+/* Hide overflow so scroll bar doesn't appear (hide the content that's hidden lol) */
+#image-track-wrapper {
+  overflow: hidden;
+  width: 95vw;
+  position: relative;
+}
+
 #image-track .image {
   width: 40vmin;
   height: 56vmin;
@@ -185,6 +192,9 @@ nav ul li a:focus {
   display: flex;
   gap: 4vmin;
   transform: translate(0%);
+
+  /* Limit image track to the width of the number of images in the track */
+  width: max-content;
 }
 
 /* StackOverflow get rid of image selection (blue highlight) */
@@ -587,13 +597,19 @@ input[type="text"], textarea, [contenteditable]
 }
 
 nav {
-  display: none;
   list-style-type:none;
+  margin-top: 0vw;
   margin-bottom: 1.5vw;
 }
 
 /*---------------------------------------------------------------------------------------------------------*/
 /* Styling the home page */
+/*---------------------------------------------------------------------------------------------------------*/
+
+/* nothing here yet */
+
+/*---------------------------------------------------------------------------------------------------------*/
+/* Styling the image track */
 /*---------------------------------------------------------------------------------------------------------*/
 
 /* nothing here yet */
